# vector

./: .clang-tidy  CMakeLists.txt
include/vec/: vec.hpp
src/: CMakeLists.txt  main.cpp  vec.hpp
test/: CMakeLists.txt  test.cpp
